# atlas-ai-silva-costa-lapeze

./: .gitignore  README.md  TP_LLM_Local_Enterprise.md  modelfile  pyproject.toml
atlas/: cli.py  config.py  guardrails.py  llm.py  memory.py  monitoring.py
config/: atlas.yaml
data/memory/: chroma.sqlite3
tests/: test_guardails.py  test_memories.py
