[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "atlas"
version = "0.1.0"
description = "Prototype d'assistant IA 100% on-premise pour ATLAS Consulting"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests",
    "pydantic",
    "python-dotenv",
    "chromadb",
    "langfuse"
]

[tool.setuptools]
packages = ["atlas"]

[project.scripts]
atlas-chat = "atlas.llm:main"